[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/player/InventoryUI.gd" type="Script" id=1]
[ext_resource path="res://InventoryList.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/ui/PanelBrown.png" type="Texture" id=3]
[ext_resource path="res://InventoryUI/InventoryItemHolder.tscn" type="PackedScene" id=4]
[ext_resource path="res://segoeuil.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://sprites/ui/32blueoutline.png" type="Texture" id=6]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 100, 100 )
margin_left = 30.0
margin_right = 37.0
margin_top = 36.0
margin_bottom = 29.0

[sub_resource type="DynamicFont" id=2]
size = 10
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 24
outline_size = 1
outline_color = Color( 1, 1, 0, 1 )
font_data = ExtResource( 5 )

[node name="Inventory" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -480.0
margin_top = -270.0
margin_right = 480.0
margin_bottom = 270.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="InventoryList" parent="." instance=ExtResource( 2 )]

[node name="HotkeyList" type="Panel" parent="."]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -165.0
margin_top = -42.0
margin_right = 165.0
custom_styles/panel = SubResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="HotkeyList"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -16.0
margin_right = 160.0
margin_bottom = 16.0
custom_constants/separation = 0
alignment = 1

[node name="ItemHolder" parent="HotkeyList/HBoxContainer" instance=ExtResource( 4 )]
editor/display_folded = true
margin_left = 0.0
margin_right = 32.0
margin_bottom = 32.0

[node name="Key" type="Label" parent="HotkeyList/HBoxContainer/ItemHolder"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.03522
margin_top = -1.01216
margin_right = -2.96478
margin_bottom = -1.01216
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "1"

[node name="ItemHolder2" parent="HotkeyList/HBoxContainer" instance=ExtResource( 4 )]
margin_left = 32.0
margin_right = 64.0
margin_bottom = 32.0

[node name="Key" type="Label" parent="HotkeyList/HBoxContainer/ItemHolder2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.03522
margin_top = -1.01216
margin_right = -2.96478
margin_bottom = -1.01216
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "2"

[node name="ItemHolder3" parent="HotkeyList/HBoxContainer" instance=ExtResource( 4 )]
margin_left = 64.0
margin_right = 96.0
margin_bottom = 32.0

[node name="Key" type="Label" parent="HotkeyList/HBoxContainer/ItemHolder3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.03522
margin_top = -1.01216
margin_right = -2.96478
margin_bottom = -1.01216
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "3"

[node name="ItemHolder4" parent="HotkeyList/HBoxContainer" instance=ExtResource( 4 )]
margin_left = 96.0
margin_right = 128.0
margin_bottom = 32.0

[node name="Key" type="Label" parent="HotkeyList/HBoxContainer/ItemHolder4"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.03522
margin_top = -1.01216
margin_right = -2.96478
margin_bottom = -1.01216
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "4"

[node name="ItemHolder5" parent="HotkeyList/HBoxContainer" instance=ExtResource( 4 )]
margin_left = 128.0
margin_right = 160.0
margin_bottom = 32.0

[node name="Key" type="Label" parent="HotkeyList/HBoxContainer/ItemHolder5"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.03522
margin_top = -1.01216
margin_right = -2.96478
margin_bottom = -1.01216
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "5"

[node name="ItemHolder6" parent="HotkeyList/HBoxContainer" instance=ExtResource( 4 )]
margin_left = 160.0
margin_right = 192.0
margin_bottom = 32.0

[node name="Key" type="Label" parent="HotkeyList/HBoxContainer/ItemHolder6"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.03522
margin_top = -1.01216
margin_right = -2.96478
margin_bottom = -1.01216
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "6"

[node name="ItemHolder7" parent="HotkeyList/HBoxContainer" instance=ExtResource( 4 )]
margin_left = 192.0
margin_right = 224.0
margin_bottom = 32.0

[node name="Key" type="Label" parent="HotkeyList/HBoxContainer/ItemHolder7"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.03522
margin_top = -1.01216
margin_right = -2.96478
margin_bottom = -1.01216
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "7"

[node name="ItemHolder8" parent="HotkeyList/HBoxContainer" instance=ExtResource( 4 )]
margin_left = 224.0
margin_right = 256.0
margin_bottom = 32.0

[node name="Key" type="Label" parent="HotkeyList/HBoxContainer/ItemHolder8"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.03522
margin_top = -1.01216
margin_right = -2.96478
margin_bottom = -1.01216
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "8"

[node name="ItemHolder9" parent="HotkeyList/HBoxContainer" instance=ExtResource( 4 )]
margin_left = 256.0
margin_right = 288.0
margin_bottom = 32.0

[node name="Key" type="Label" parent="HotkeyList/HBoxContainer/ItemHolder9"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.03522
margin_top = -1.01216
margin_right = -2.96478
margin_bottom = -1.01216
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "9"

[node name="ItemHolder10" parent="HotkeyList/HBoxContainer" instance=ExtResource( 4 )]
margin_left = 288.0
margin_right = 320.0
margin_bottom = 32.0

[node name="Key" type="Label" parent="HotkeyList/HBoxContainer/ItemHolder10"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.03522
margin_top = -1.01216
margin_right = -2.96478
margin_bottom = -1.01216
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "0"

[node name="HotkeySelection" type="TextureRect" parent="HotkeyList"]
margin_left = 6.0
margin_top = 5.0
margin_right = 46.0
margin_bottom = 45.0
mouse_filter = 2
texture = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="CashAmount" type="Label" parent="."]
margin_left = 655.587
margin_top = 505.554
margin_right = 734.587
margin_bottom = 538.554
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "casdasd"
